# bitos

./: Design.md  Dockerfile  Makefile  README.md
dependencies/buddy_system_allocator-0.6.0/: .cargo_vcs_info.json
dependencies/fatfs-0.3.6/: .cargo_vcs_info.json
dependencies/xmas-elf-0.9.1/: .cargo_vcs_info.json
easy-fs/: Cargo.toml
easy-fs-fuse/src/: main.rs
easy-fs/src/: efs.rs  vfs.rs
fat32/: Cargo.toml
fat32/src/: block_cache.rs  fat.rs  layout.rs  lib.rs  vfs.rs
modify-img/: Cargo.toml
modify-img/src/: main.rs
os/: Cargo.toml  Makefile
os/src/: config.rs  link_app.S  loader.rs  main.rs
os/src/drivers/block/: mod.rs  virtio_blk.rs
os/src/fs/: inode.rs  mod.rs  pipe.rs  stdio.rs
os/src/mm/: address.rs  frame_allocator.rs  heap_allocator.rs  memory_set.rs  mod.rs  page_table.rs
os/src/sync/: up.rs
os/src/syscall/: fs.rs  mod.rs  process.rs
os/src/task/: context.rs  id.rs  manager.rs  mod.rs  processor.rs  task.rs
os/src/trap/: mod.rs
user/: Cargo.toml  Makefile
user/src/: lib.rs  linker.ld  syscall.rs
