[package]
name = "os"
version = "0.1.0"
edition = "2021"


[dependencies]
bitflags = { path = "../dependencies/bitflags-1.3.2" }
buddy_system_allocator = { path = "../dependencies/buddy_system_allocator-0.6.0" }
lazy_static = { path = "../dependencies/lazy_static-1.5.0", features = ["spin_no_std"] }
log = { path = "../dependencies/log-0.4.22" }
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
xmas-elf = { path = "../dependencies/xmas-elf-0.9.1" }
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers", rev = "4ee80e5" }
spin = { path = "../dependencies/spin-0.9.8" }
fat32 = { path = "../fat32" }

