[package]
name = "user_lib"
version = "0.1.0"
authors = ["Yifan Wu <shinbokuow@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buddy_system_allocator = { path = "../dependencies/buddy_system_allocator-0.6.0" }
bitflags = { path = "../dependencies/bitflags-1.3.2" }
spin = { path = "../dependencies/spin-0.9.8" }
lock_api = { path = "../dependencies/lock_api-0.4.6" }
lazy_static = { path = "../dependencies/lazy_static-1.5.0", features = ["spin_no_std"] }

[profile.release]
opt-level = "z" # Optimize for size.
strip = true    # Automatically strip symbols from the binary.
lto = true
